--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGO_URI_LOCAL = mongodb://127.0.0.1:27017/testdb   
+MONGO_URI_LOCAL=mongodb+srv://cre8ivecircleacademy:YJ2VSDG41naWufZ0@YJ2VSDG41naWufZ0.hjnjw4k.mongodb.net/
+MAIL_USER=cre8ivecircleacademy@gmail.com
+MAIL_PASS=odyp pqio ztpl ebfg
